# CPP-GUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Structure.pages
PDESolver/: CMakeLists.txt  LinearAlgebra.h  Region.cpp  Region.h  Viewer.cpp  Viewer.h  main.cpp
PDESolver/Tests/: GridTest.cpp
PDESolver/cmake/: CPackConfig.cmake  GraphicsConfig.cmake
cmake/: DoxygenTarget.cmake  macros.cmake
doc/: Doxyfile.ini
graphics/: CMakeLists.txt  Camera.cpp  Camera.h  Element.cpp  Element.h  Event.cpp  Event.h  GeometryPrimitive.cpp  GeometryPrimitive.h  Logger.cpp  Logger.h  Material.h  Primitives.h  README.md  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Text.cpp  Text.h  View.cpp  View.h  View3D.cpp  View3D.h  Window.cpp  Window.h  main.cpp
graphics/cmake/: CPackConfig.cmake  GraphicsConfig.cmake
graphics/learning/: OpenGL sample code  Solar system repo
graphics/learning/MayaCamera/: Makefile  MayaCamera.sln  MayaCamera.vcproj  main.cpp
graphics/learning/Pui/: Pui.sln  readme.txt
graphics/learning/Pui/example1/: main.cpp
graphics/learning/Pui/example10/: example10.vcproj  main.cpp
graphics/learning/Pui/example11/: example11.vcproj  main.cpp
graphics/learning/Pui/example2/: example2.vcproj  main.cpp
graphics/learning/Pui/example3/: example3.vcproj  main.cpp
graphics/learning/Pui/example4/: example4.vcproj  main.cpp
graphics/learning/Pui/example5/: example5.vcproj  main.cpp
graphics/learning/Pui/example6/: example6.vcproj  main.cpp
graphics/learning/Pui/example7/: example7.vcproj  main.cpp
graphics/learning/Pui/example8/: example8.vcproj  main.cpp
graphics/learning/Pui/example9/: example9.vcproj  main.cpp
graphics/learning/genTriangles/: Makefile  genTriangles.c  genTriangles.sln  genTriangles.vcproj
graphics/resources/JSON/: color_scheme_dark.json  config.json  materials.json
graphics/resources/shaders/: shader_2D_colour.frag  shader_2D_colour_line.vert  shader_2D_text.frag  shader_2D_text.vert  shader_2D_texture.frag  shader_2D_texture.vert  shader_3D_colour.frag  shader_3D_colour.vert  shader_3D_material.frag
